@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1256 2003/01/28 04:43:34 markd Exp $
+$NetBSD: CHANGES,v 1.1257 2003/01/28 08:38:17 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -452,3 +452,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated superlu to 2.0nb2 [uebayasi 2003-01-28]
 	Updated tk-expect to 5.38 [markd 2003-01-28]
 	Added umbrello-1.1.1 [markd 2003-01-28]
+	Updated cgoban-java to 2.4.57 [jlam 2003-01-28]
